// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Pure component match expected snapshot 1`] = `
<withStyles(ContainerPure)>
  <withStyles(RowPure)>
    <withStyles(ColumnPure)
      xs={12}
    >
      <div
        className="default-Footer-footer"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            lg={4}
            xs={0}
          />
          <withStyles(ColumnPure)
            lg={4}
            xs={12}
          >
            <div
              className="default-Footer-copyright"
            >
              DEM Team - 04.03.2007
            </div>
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            lg={4}
            xs={0}
          >
            <withStyles(HiddenPure)
              md="down"
            >
              <div
                className="default-Footer-socialMediaLinkIconContainer"
              />
            </withStyles(HiddenPure)>
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </div>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
</withStyles(ContainerPure)>
`;

exports[`Footer Pure component with socialMediaLinkArray match expected snapshot 1`] = `
<withStyles(ContainerPure)>
  <withStyles(RowPure)>
    <withStyles(ColumnPure)
      xs={12}
    >
      <div
        className="default-Footer-footer"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            lg={4}
            xs={0}
          />
          <withStyles(ColumnPure)
            lg={4}
            xs={12}
          >
            <div
              className="default-Footer-copyright"
            >
              DEM Team - 04.03.2007
            </div>
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            lg={4}
            xs={0}
          >
            <withStyles(HiddenPure)
              md="down"
            >
              <div
                className="default-Footer-socialMediaLinkIconContainer"
              >
                <SocialMediaLink
                  className="default-Footer-socialMediaLinkIcon"
                  socialMediaLinkItem={
                    Object {
                      "href": "https://vk.com/exmachina2",
                      "id": 2,
                      "order": 2,
                      "svgImageName": "Vk",
                      "title": "VK - Ex Machina group",
                    }
                  }
                />
                <SocialMediaLink
                  className="default-Footer-socialMediaLinkIcon"
                  socialMediaLinkItem={
                    Object {
                      "href": "http://steamcommunity.com/groups/Ex_Machina",
                      "id": 1,
                      "order": 1,
                      "svgImageName": "Steam",
                      "title": "Steam - Ex Machina Community",
                    }
                  }
                />
              </div>
            </withStyles(HiddenPure)>
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </div>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
</withStyles(ContainerPure)>
`;
